seeder. pagination sort

--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -57,7 +57,7 @@ div.note-btn-group.btn-group {
 .pagination {
     font-size: 7px;
 }
-.truck-container {
+.pet-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -65,10 +65,7 @@ div.note-btn-group.btn-group {
     letter-spacing: 1px;
     padding: 11px;
 
-    --_notices {
+    --_history {
         margin-top: 20px;
     }
-}
-.background-image {
-bbb
 }
